# cool-compiler

./: README.md
PA2/: .gitignore  CMakeLists.txt  README.txt  allocator.c  allocator.h  class_map.c  class_map.h  helloworld.cl  helloworld.cl-ast  main.c  parser.c  parser.h  run_tests.sh  run_tests_2.sh  run_tests_full.sh  types.c  types.h
PA2/bad_testcases/: addition_non_integer.cl  assignment_mismatch.cl  assignment_mismatch_2.cl  attribute_redefinition.cl  bad_casing.cl  bad_inheritance.cl  bool_inheritance.cl  case_duplicate.cl  case_empty.cl  class_attribute.cl  class_attribute_2.cl  class_cycle.cl  class_redefinition.cl  equality_mismatch copy 2.cl  equality_mismatch copy.cl  equality_mismatch.cl  inheritance_cycle copy.cl  inheritance_cycle.cl  int_methods.cl  io_redefinition.cl  isvoid.cl  loop_not_bool.cl  main_without_main.cl  method_mismatch.cl  method_nonexistent.cl  method_redefinition.cl  mismatched_composition.cl  mismatched_return copy 2.cl  mismatched_return copy 3.cl  mismatched_return copy 4.cl  mismatched_return copy.cl  mismatched_return.cl  negation_mismatch copy.cl  negation_mismatch.cl  object_inheritance.cl  parameter_count_mismatch copy 2.cl  parameter_count_mismatch copy 3.cl  parameter_count_mismatch copy.cl  parameter_count_mismatch.cl  public_attribute.cl  (+8 more)
PA2/cool_programs/: addition_void.cl  addition_void.cl-ast  atoi.cl-type  bad2.cl  bad2.cl-ast  bad3.cl  bad3.cl-ast  bad_inheritance.cl  bad_inheritance.cl-ast  blahbleh.cl  blahbleh.cl-ast  blahbleh.cl-type  cells.cl-type  good1.cl  good1.cl-ast  good1.cl-type  helloworld-old.cl-type  (+22 more)
(+112 files in other folders)
